--- a/scss/_enchilada.scss
+++ b/scss/_enchilada.scss
@@ -5,6 +5,7 @@ $custom-colors: (
 
 $theme-colors: map-merge($theme-colors, $custom-colors);
 body{
+    font-family: Arial, Helvetica, sans-serif;
 font-size: 18px;
     header{
         background-size: cover;
